@@ -20,8 +20,8 @@
  * failure and {@link #available()} self-skips cleanly — callers never see a
  * throw out of {@code available()}.
  *
- * FFM is a preview API in JDK 21: compile with `--release 21 --enable-preview`,
- * run with `--enable-preview --enable-native-access=ALL-UNNAMED`.
+ * FFM is final since JDK 22: compile with `--release 22`, run with
+ * `--enable-native-access=ALL-UNNAMED`.
  */
 import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
@@ -280,7 +280,7 @@ public final class DrTrace {
     // freed when the call returns; the shared ARENA is reserved for the process-
     // lifetime library lookup. Otherwise every call would leak its buffer forever.
     private static MemorySegment str(Arena a, String s) {
-        return s == null ? MemorySegment.NULL : a.allocateUtf8String(s);
+        return s == null ? MemorySegment.NULL : a.allocateFrom(s);
     }
 
     // ---- process-wide lifecycle ----
