@@ -11,8 +11,8 @@
  * Asserts are NOT used (the `assert` keyword is off by default); failures throw,
  * are reported as "not ok", and exit nonzero. Each check prints "ok N - ...".
  *
- * Compile with `--release 21 --enable-preview`, run with `--enable-preview
- * --enable-native-access=ALL-UNNAMED`.
+ * Compile with `--release 22`, run with
+ * `--enable-native-access=ALL-UNNAMED`.
  */
 import java.io.IOException;
 import java.lang.foreign.MemorySegment;
